# Ai-powered-KYC-and-Onboarding

./: .analyzerignore  .github-credentials.env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
engines/intelligence/: A2_PARALLEL_NOTE.md  README.md  WORKTREE_MARKER.md  pyproject.toml
engines/intelligence/src/intelligence/: __init__.py  analyzer.py  cli.py  models.py  walker.py
engines/intelligence/src/intelligence/detectors/: base.py  fastapi.py  nodejs.py  spring_boot.py
engines/intelligence/src/intelligence/extractors/: __init__.py  fastapi.py  nodejs.py  spring_boot.py  utils.py
engines/intelligence/src/intelligence/generators/: api_map.py  (+4 more)
engines/intelligence/tests/: test_analyzer.py  test_detectors.py  test_flow_tracing.py  test_generators.py  test_rust_bridge.py
engines/rust-analyzer/: Cargo.toml  Dockerfile  README.md
engines/rust-analyzer/benches/: scan_benchmark.rs
engines/rust-analyzer/src/: error.rs  file_walker.rs  lib.rs  main.rs  scan.rs
engines/rust-analyzer/src/graph/: mod.rs
engines/rust-analyzer/src/parser/: mod.rs  python.rs  universal.rs
engines/rust-analyzer/src/risk/: mod.rs
engines/rust-analyzer/tests/: integration_test.rs
services/onboarding-api/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
services/onboarding-api/app/: __init__.py  main.py
services/onboarding-api/app/core/: auth.py  config.py  database.py  exceptions.py  logging.py  metrics.py
services/onboarding-api/app/models/: base.py  customer.py  kyc.py  risk.py
services/onboarding-api/app/repositories/: customer_repository.py  document_repository.py  kyc_repository.py
services/onboarding-api/app/routers/: customer_read.py  customers.py  health.py  kyc.py  risk.py  verification.py
services/onboarding-api/app/schemas/: customer.py  kyc.py  risk.py  validators.py  verification.py
services/onboarding-api/app/services/: bank_verification_service.py  customer_service.py  kyc_service.py  pan_verification_service.py  risk_score_service.py  standalone_verification_service.py
services/onboarding-api/tests/: conftest.py  test_auth.py  test_bug001_regression.py  test_customers.py  test_health.py  test_integration.py  test_kyc.py  test_metrics.py  test_risk.py  test_verification.py
(+375 files in other folders)
