[package]
name = "rust-analyzer"
version = "0.1.0"
edition = "2021"
description = "High-performance repository parser and risk calculator"
license = "MIT"

[[bin]]
name = "rust-analyzer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"

[[bench]]
name = "scan_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
debug = true
